force-app/main/default/objects/custom_create260__c/custom_create260__c.object-meta.xml
<CustomObject>
    <label>Custom created object260</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects260</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>