force-app/main/default/objects/custom_create260__c/fields/custom_create_260field520__c.field-meta.xml
<CustomField>
    <fullName>custom_create_260field520__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 260field520</label>
    <type>Checkbox</type>
</CustomField>